package com.lld.problems.ridebooking.code.constants;

public enum DriverStatus {
    OFFLINE,
    AVAILABLE,
    ON_TRIP
}
