package com.lld.problems.ridebooking.code.constants;

public enum RideStatus {
    PENDING,
    MATCHED,
    STARTED,
    COMPLETED,
    CANCELLED
}
