package com.lld.problems.ridebooking.code.constants;

public enum VehicleType {
    MINI,
    SUV,
    SEDAN
}
