package com.lld.problems.ridebooking.code.services;

public class PaymentService {
    public void processPayment(double amount) {
        System.out.println(amount + " has been paid successfully!");
    }
}
